# embedding_api

./: .gitignore  Dockerfile  LICENSE  README.md  compose.dev.yml  main.py  pyproject.toml  renovate.json
.github/workflows/: docker.yaml
